{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 936,
  "lineage": "323e474d-a9f3-9cd9-d985-9322fe004dfc",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_service",
      "name": "jupyterhub_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jupyterhub/proxy-public",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "jupyterhub",
                  "meta.helm.sh/release-namespace": "jupyterhub",
                  "service.beta.kubernetes.io/aws-load-balancer-backend-protocol": "tcp",
                  "service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout": "3600",
                  "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
                  "service.beta.kubernetes.io/aws-load-balancer-ip-address-type": "ipv4",
                  "service.beta.kubernetes.io/aws-load-balancer-nlb-target-type": "ip",
                  "service.beta.kubernetes.io/aws-load-balancer-scheme": "internal",
                  "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-west-2:359917279464:certificate/39eba22f-c0a6-4ece-9a8e-8e741fe48d5c",
                  "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "external"
                },
                "generation": 0,
                "labels": {
                  "app": "jupyterhub",
                  "app.kubernetes.io/managed-by": "Helm",
                  "chart": "jupyterhub-3.2.1",
                  "component": "proxy-public",
                  "heritage": "Helm",
                  "release": "jupyterhub"
                },
                "name": "proxy-public",
                "namespace": "jupyterhub",
                "resource_version": "5275",
                "uid": "35049b30-8581-4097-b2dd-c14f60178fa4"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.217.118",
                "cluster_ips": [
                  "172.20.217.118"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "https",
                    "node_port": 30175,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "http"
                  },
                  {
                    "name": "http",
                    "node_port": 32325,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "jupyterhub",
                  "component": "proxy",
                  "release": "jupyterhub"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-jupyterh-proxypub-669921a0f6-fe3cde53472739ee.elb.us-west-2.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:security-group/sg-069f8d66bcc882ffb",
            "description": "Allow inbound NFS traffic from private subnets of the VPC",
            "egress": [],
            "id": "sg-069f8d66bcc882ffb",
            "ingress": [
              {
                "cidr_blocks": [
                  "100.64.0.0/16"
                ],
                "description": "Allow NFS 2049/tcp",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "swish-mlops-efs",
            "name_prefix": "",
            "owner_id": "359917279464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "transfer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:security-group/sg-006e3ea801dca6dc7",
            "description": "Security group for AWS Transfer Family SFTP endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006e3ea801dca6dc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SFTP access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "swish-mlops-transfer",
            "name_prefix": "",
            "owner_id": "359917279464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-transfer"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-transfer"
            },
            "timeouts": null,
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jupyterhub",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jupyterhub",
            "metadata": [
              {
                "generation": 0,
                "name": "jupyterhub",
                "resource_version": "3845",
                "uid": "7f2d7e06-0403-4761-ac3d-e9a2c859985d"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.efs_config",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "aws_observability",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:security-group/sg-0b18b0a7f27075ca8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b18b0a7f27075ca8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dbba5570c5dc0e03"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Nodes on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dbba5570c5dc0e03"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "swish-mlops-cluster-20251008023102704700000003",
            "name_prefix": "swish-mlops-cluster-",
            "owner_id": "359917279464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swish-mlops-cluster"
            },
            "tags_all": {
              "Name": "swish-mlops-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:security-group/sg-0dbba5570c5dc0e03",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbba5570c5dc0e03",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to Nodegroup all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b18b0a7f27075ca8"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b18b0a7f27075ca8"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b18b0a7f27075ca8"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b18b0a7f27075ca8"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b18b0a7f27075ca8"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b18b0a7f27075ca8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b18b0a7f27075ca8"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "elbv2.k8s.aws/targetGroupBinding=shared",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031ffadce2a89f805"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "swish-mlops-node-20251008023102704600000002",
            "name_prefix": "swish-mlops-node-",
            "owner_id": "359917279464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swish-mlops-node",
              "kubernetes.io/cluster/swish-mlops": "owned"
            },
            "tags_all": {
              "Name": "swish-mlops-node",
              "kubernetes.io/cluster/swish-mlops": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-259315206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b18b0a7f27075ca8",
            "security_group_rule_id": "sgr-04fe2ee8a99d4b1f3",
            "self": false,
            "source_security_group_id": "sg-0dbba5570c5dc0e03",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Nodes on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3601965169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b18b0a7f27075ca8",
            "security_group_rule_id": "sgr-025b0854e369c087e",
            "self": false,
            "source_security_group_id": "sg-0dbba5570c5dc0e03",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4140046547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-0ef29bae86478cdb0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4139959342",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-0344a620a68e43b53",
            "self": false,
            "source_security_group_id": "sg-0b18b0a7f27075ca8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3494716434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-0ef7989ab53f47d6b",
            "self": false,
            "source_security_group_id": "sg-0b18b0a7f27075ca8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-420430724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-02b1fd40b0e11b008",
            "self": false,
            "source_security_group_id": "sg-0b18b0a7f27075ca8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-173244325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-08f0ad904200adca8",
            "self": false,
            "source_security_group_id": "sg-0b18b0a7f27075ca8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1861373038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-0cc8668dc7a80dee0",
            "self": false,
            "source_security_group_id": "sg-0b18b0a7f27075ca8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3100790420",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-07cd15b71ca154534",
            "self": false,
            "source_security_group_id": "sg-0b18b0a7f27075ca8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_cluster_to_node_all_traffic",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to Nodegroup all traffic",
            "from_port": 0,
            "id": "sgrule-462317335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-03effcb4046c815ab",
            "self": false,
            "source_security_group_id": "sg-0b18b0a7f27075ca8",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3947351298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-08beb20ae82fa7697",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-583816734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-0155079dadfd74cbb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-898332889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-0b22c6800631c3799",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2446646070",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0dbba5570c5dc0e03",
            "security_group_rule_id": "sgr-03f3843c55c1917d0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:network-acl/acl-05101acdc777da092",
            "default_network_acl_id": "acl-05101acdc777da092",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05101acdc777da092",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "359917279464",
            "subnet_ids": [
              "subnet-00ae761f1810d1193",
              "subnet-01c1e97552f3c4b35",
              "subnet-05b9aaea0e0968152",
              "subnet-09e4ffecb954217fa",
              "subnet-0b0d7efc47ca8845b",
              "subnet-0be52cfb2b3fa9ba4"
            ],
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-default"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-default"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:route-table/rtb-005f48f031905b7b3",
            "default_route_table_id": "rtb-005f48f031905b7b3",
            "id": "rtb-005f48f031905b7b3",
            "owner_id": "359917279464",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-default"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:security-group/sg-0ac00c4c53614cabe",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ac00c4c53614cabe",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "359917279464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-default"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-default"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0090a73beec131ee3",
            "arn": "arn:aws:ec2:us-west-2:359917279464:elastic-ip/eipalloc-0090a73beec131ee3",
            "association_id": "eipassoc-0d86a3e9dd53eecd6",
            "domain": "vpc",
            "id": "eipalloc-0090a73beec131ee3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0da268ebc9d150c62",
            "private_dns": "ip-10-1-2-5.us-west-2.compute.internal",
            "private_ip": "10.1.2.5",
            "public_dns": "ec2-100-21-99-117.us-west-2.compute.amazonaws.com",
            "public_ip": "100.21.99.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:internet-gateway/igw-0561937abed05f608",
            "id": "igw-0561937abed05f608",
            "owner_id": "359917279464",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0090a73beec131ee3",
            "association_id": "eipassoc-0d86a3e9dd53eecd6",
            "connectivity_type": "public",
            "id": "nat-093da82d8ebb4f716",
            "network_interface_id": "eni-0da268ebc9d150c62",
            "private_ip": "10.1.2.5",
            "public_ip": "100.21.99.117",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b0d7efc47ca8845b",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-us-west-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c3a02f92d3d8d5ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-093da82d8ebb4f716",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c3a02f92d3d8d5ba",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0561937abed05f608",
            "id": "r-rtb-0d5de8736deceefba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5de8736deceefba",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:route-table/rtb-0c3a02f92d3d8d5ba",
            "id": "rtb-0c3a02f92d3d8d5ba",
            "owner_id": "359917279464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-093da82d8ebb4f716",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:route-table/rtb-0d5de8736deceefba",
            "id": "rtb-0d5de8736deceefba",
            "owner_id": "359917279464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0561937abed05f608",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-public"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0769aa72b158f4",
            "route_table_id": "rtb-0c3a02f92d3d8d5ba",
            "subnet_id": "subnet-09e4ffecb954217fa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d8cec106c212d50",
            "route_table_id": "rtb-0c3a02f92d3d8d5ba",
            "subnet_id": "subnet-00ae761f1810d1193"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9a1894d7ee3f037",
            "route_table_id": "rtb-0c3a02f92d3d8d5ba",
            "subnet_id": "subnet-0be52cfb2b3fa9ba4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035dbbdc43019541c",
            "route_table_id": "rtb-0c3a02f92d3d8d5ba",
            "subnet_id": "subnet-01c1e97552f3c4b35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bef8eac48f7802a5",
            "route_table_id": "rtb-0d5de8736deceefba",
            "subnet_id": "subnet-0b0d7efc47ca8845b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003c12f94cd81a183",
            "route_table_id": "rtb-0d5de8736deceefba",
            "subnet_id": "subnet-05b9aaea0e0968152"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:subnet/subnet-09e4ffecb954217fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e4ffecb954217fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359917279464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private-us-west-2a",
              "karpenter.sh/discovery": "swish-mlops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private-us-west-2a",
              "karpenter.sh/discovery": "swish-mlops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:subnet/subnet-00ae761f1810d1193",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ae761f1810d1193",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359917279464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private-us-west-2b",
              "karpenter.sh/discovery": "swish-mlops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private-us-west-2b",
              "karpenter.sh/discovery": "swish-mlops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:subnet/subnet-0be52cfb2b3fa9ba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "100.64.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be52cfb2b3fa9ba4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359917279464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private-us-west-2a",
              "karpenter.sh/discovery": "swish-mlops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private-us-west-2a",
              "karpenter.sh/discovery": "swish-mlops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:subnet/subnet-01c1e97552f3c4b35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "100.64.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c1e97552f3c4b35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359917279464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private-us-west-2b",
              "karpenter.sh/discovery": "swish-mlops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-private-us-west-2b",
              "karpenter.sh/discovery": "swish-mlops",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:subnet/subnet-0b0d7efc47ca8845b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0d7efc47ca8845b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359917279464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:subnet/subnet-05b9aaea0e0968152",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b9aaea0e0968152",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359917279464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02455fc6a0997c6ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:359917279464:vpc/vpc-02455fc6a0997c6ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/21",
            "default_network_acl_id": "acl-05101acdc777da092",
            "default_route_table_id": "rtb-005f48f031905b7b3",
            "default_security_group_id": "sg-0ac00c4c53614cabe",
            "dhcp_options_id": "dopt-0991f8a5b7e1d0315",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02455fc6a0997c6ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005f48f031905b7b3",
            "owner_id": "359917279464",
            "tags": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops"
            },
            "tags_all": {
              "Blueprint": "swish-mlops",
              "GithubRepo": "github.com/awslabs/data-on-eks",
              "Name": "swish-mlops"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}